# data-splitter

./: README.md  pyproject.toml
data_splitter/: __init__.py  core.py
